[package]
name = "cable"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.45"
serde_yaml = "0.9.34"
pulldown-cmark = "0.13.4"
html-escape = "0.2.14"
tiny_http = "0.12.0"
ascii = "1.1.0"
notify-debouncer-mini = "0.6.0"
